v0.2.10:
    Starbug:
        >   Adding caliblevel into headers
	APPHOT:
		>	BIG Simplifying error calculation
v0.2.9:
    General:
        >   Fixing a runtime warning on sqrt(nan) in apphot error array
        >   Turning off verbose on starbug.__setstate__
        >   match.generic_match adds magnitude properly
        >   removed peak from apphot catalogue
        >   region generation looks at flux not peak
v0.2.8:
    StarBug:
        >   Adding self.stage to track where the processes differ
        >   Can now handle stage two and stage three
    APPhot:
        >   Takes the arrays now, not the full hdulist
    Detection:
        >   Adding option to not do background 2d (needs streamlined)
    Match:
        >   Added Dither match

v0.2.7:
	Param:
		>	Changed the default values for APPHOT_R APPHOT_SKY* 
v0.2.6:
	General
		>Fixing the log10 warning in flux2mag
		>Adding a few tests
		>adding requirements.txt...yet more packaging files -.-
v0.2.5: I keep forgetting to update this file
		
v0.2.4:
    Minor tweaks

v0.2.3:
	Previously it successully installed with pip, but the param file failed, this hopefully fixes that
v0.2.2:
	Setting things up for PIP
v0.2.1:
    General
        >   Fix some MACOS compatibility errors
        >   Added OUTDIR to param file
v0.2.0:
	>	first pass aperture phot package..with some quirks
	>	--generate-run -> run.sh makes a simple run modifiable run script to aid the user
	>	matching stdev now (SHOULD) take the largest rather than combining

v0.1.7:
	>	APPHot local background estimated using MODE not median
	>	Can pass sigma sky into apphot to sigma clip background backgorund annulis
	>	band match first draft
	

v0.1.6:
	Aperture Photometry things:
		>	apcorr fits aperture radius
		>	errors
		>	source flags saturation or JUMP
		>	averaging now takes mean,std and numsq errors
        >   flag raised if the mean and median are more than 5% different for one source over frames (SRC_VAR)

v0.1.5: