@@ -1,6 +1,7 @@
 tags
 *.fits
 *.swp
+TODO.md
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
